
dnl AC_PREREQ([2.13])

dnl without this order in this file, autoconf will not work!
dnl the argument is a source file out of your sources. But
dnl acinclude.m4 makes the job for all programs ;-)
AC_INIT(acinclude.m4)

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl without this order in this file, automake will be confused!
dnl the argument
AM_CONFIG_HEADER(config.h)
AC_CHECK_COMPILERS

if test "$GCC" = "yes"; then
  CXXFLAGS="$CXXFLAGS"
fi

AM_INIT_AUTOMAKE(koffice, 0.1)

dnl make $KDEDIR the default for the installation
AC_PREFIX_DEFAULT(${KDEDIR:-/usr/local/kde})

AM_ENABLE_SHARED(yes)
AM_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL
AC_PATH_KDE
AM_KDE_WITH_NLS

dnl Check for MICO. The argument is the minimal version required.
KDE_CHECK_MICO()

idldir="\$(includedir)/idl"
AC_SUBST(idldir)

dnl KDE_CHECK_PYTHON(1.5)
AC_CHECK_HEADERS(unistd.h sys/param.h floatingpoint.h)
KDE_CHECK_KIMGIO
AC_FIND_QIMGIO
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

KDE_CHECK_NEWLIBS

KOML_INCLUDES='-I$(top_srcdir)/lib/koml -I$(top_builddir)/lib/koml'
AC_SUBST(KOML_INCLUDES)

KSTORE_INCLUDES='-I$(top_srcdir)/lib/store -I$(top_builddir)/lib/store'
AC_SUBST(KSTORE_INCLUDES)

KOFFICECORE_INCLUDES='-I$(top_srcdir)/lib/kofficecore -I$(top_builddir)/lib/kofficecore'
AC_SUBST(KOFFICECORE_INCLUDES)

KOFFICEUI_INCLUDES='-I$(top_srcdir)/lib/kofficeui -I$(top_builddir)/lib/kofficeui'
AC_SUBST(KOFFICEUI_INCLUDES)

LIB_KOFFICEUI='$(top_builddir)/lib/kofficeui/libkofficeui.la'
LIB_KOFFICECORE='$(top_builddir)/lib/kofficecore/libkofficecore.la'
LIB_KSTORE='$(top_builddir)/lib/store/libkstore.la'
LIB_KOML='$(top_builddir)/lib/koml/libkoml.la'
AC_SUBST(LIB_KOFFICEUI)
AC_SUBST(LIB_KOFFICECORE)
AC_SUBST(LIB_KSTORE)
AC_SUBST(LIB_KOML)

interfacedir='$(top_srcdir)/lib/interfaces'
AC_SUBST(interfacedir)

KOFFICE_LIBS='$(LIB_KOFFICEUI) $(LIB_KOFFICECORE) $(LIB_KSTORE) $(LIB_KOML) $(LIB_KDEUTIL)'
AC_SUBST(KOFFICE_LIBS)

KOFFICE_INCLUDES='-I$(top_srcdir)/lib $(KOFFICEUI_INCLUDES) $(KOFFICECORE_INCLUDES) $(KOML_INCLUDES) $(KSTORE_INCLUDES)'
AC_SUBST(KOFFICE_INCLUDES)

dnl ====================
dnl checks for KATASBASE
dnl ====================

KATABASE_DIR=''

dnl check for PostgreSQL headers and libraries
dnl if present compile Katabase 
AC_MSG_CHECKING([for PostgreSQL])
 
AC_ARG_WITH(pgsqldir,
[  --with-pgsqldir=pgsqldir   use pgsql installed in pgsqldir ],
[
  ac_pgsql_dir=$withval
], ac_pgsql_dir=/usr/local
)
 
pgsql_incdirs="$ac_pgsql_dir/pgsql/include /usr/include/pgsql /usr/include /usr/local/include"
AC_FIND_FILE(libpq++.h, $pgsql_incdirs, pgsql_incdir)
if test ! -r $pgsql_incdir/libpq++.h; then
  AC_MSG_WARN(libpq++.h not found.)
else
  KATABASE_DIR='katabase'
fi

PGSQLINC=-I$pgsql_incdir
AC_SUBST(PGSQLINC)

pgsql_libdirs="$ac_pgsql_dir/pgsql/lib /usr/lib /usr/local/lib"
AC_FIND_FILE(libpq.a, $pgsql_libdirs, pgsql_libdir)
if test ! -r $pgsql_libdir/libpq++.a; then
  AC_MSG_WARN(libpq++ not found.)
fi

PGSQLLIB=-L$pgsql_libdir
AC_SUBST(PGSQLLIB)
 
AC_MSG_RESULT([headers $pgsql_incdir, libraries $pgsql_libdir])
 
KATABASE_LIBS="-lpq++"
AC_SUBST(KATABASE_LIBS)
AC_SUBST(KATABASE_DIR)

dnl add here all your Makefiles. These are created by configure
AC_OUTPUT( \
	Makefile \
	katabase/Makefile \
	katabase/lib/Makefile \
	katabase/lib/kdb/Makefile \
	katabase/lib/kdb/kdbcore/Makefile \
	katabase/lib/kdb/kdbpgsql/Makefile \
	katabase/lib/katabasecore/Makefile \
	katabase/lib/katabaseui/Makefile \
	katabase/kdb/Makefile \
        katabase/kformviewer/Makefile \
        katabase/kformeditor/Makefile \
	katabase/kformeditor/pics/Makefile \
        katabase/kformeditor/toolbar/Makefile \
        katabase/kformeditor/cursors/Makefile \
        katabase/kformeditor/formassistent/Makefile \
	katabase/ktables/Makefile \
	katabase/ktables/pics/Makefile \
	katabase/doc/Makefile \
	katabase/doc/ktables/Makefile \
	katabase/doc/ktables/en/Makefile \
	kchart/Makefile	\
	kchart/core/Makefile \
	kchart/pics/Makefile \
	kchart/ui/Makefile \
	kformula/Makefile \
	kformula/pics/Makefile \
	killustrator/Makefile \
	killustrator/doc/Makefile \
	killustrator/filter/Makefile \
	killustrator/koffice/Makefile \
	killustrator/pics/Makefile \
	killustrator/share/Makefile \
	killustrator/standalone/Makefile \
	killustrator/xmlutils/Makefile \
	kimage/Makefile \
	kimage/pics/Makefile \
	kimageshop/Makefile \
	kimageshop/pics/Makefile \
	kimageshop/data/Makefile \
	kimageshop/data/brushes/Makefile \
	kimageshop/data/images/Makefile \
   	kpresenter/Makefile \
	kpresenter/autoformEdit/Makefile \
	kpresenter/autoforms/Makefile \
	kpresenter/autoforms/Arrows/Makefile \
	kpresenter/autoforms/Connections/Makefile \
	kpresenter/pics/Makefile \
	kpresenter/templates/Makefile \
	kpresenter/templates/Screenpresentations/Makefile \
	kpresenter/templates/Professional/Makefile \
	kpresenter/toolbar/Makefile \
	kpresenter/dtd/Makefile \
	kpresenter/slideshow/Makefile \
	kspread/Makefile \
	kspread/pics/Makefile \
	kspread/toolbar/Makefile \
	kspread/scripts/Makefile \
	kspread/dtd/Makefile \
	kspread/filters/Makefile \
	kspread/filters/komma/Makefile \
	kword/Makefile \
	kword/toolbar/Makefile \
	kword/templates/Makefile \
	kword/templates/Wordprocessing/Makefile \
	kword/templates/DTP/Makefile \
	kword/dtd/Makefile \
	kword/filters/Makefile \
	kword/filters/ascii/Makefile \
	kword/filters/html/Makefile \
	kdiagramm/Makefile \
	kdiagramm/pics/Makefile \
	koshell/Makefile \
	lib/Makefile \
	lib/kscript/Makefile \
	lib/kscript/ksidl/Makefile \
	lib/kofficecore/Makefile \
	lib/kofficeui/Makefile \
	lib/kofficeui/pics/Makefile \
	lib/kofficeui/test/Makefile \
	lib/koml/Makefile \
	lib/store/Makefile \
	filters/Makefile \
        filters/lib/Makefile \
	filters/excel97/Makefile \
	filters/powerpoint97/Makefile \
	filters/winword97/Makefile \
	tools/Makefile \
	tools/spell/Makefile \
	plugins/Makefile \
	plugins/recorder/Makefile \
	plugins/recorder/pics/Makefile \
	plugins/calc/Makefile \
	plugins/calc/pics/Makefile \
	pics/Makefile \
	pics/toolbar/Makefile \
	servicetypes/Makefile
 )
